improved next/prev interval-check, optimized loading order of data, fixed broken css-class, removed data-tooltip from "next"-button on start #562

--- a/laterpay/asset_sources/stylus/pages/_dashboard.styl
+++ b/laterpay/asset_sources/stylus/pages/_dashboard.styl
@@ -27,11 +27,12 @@ h1 {
         }
     }
 
-    .lp_prevLink--disabled,
-    .lp_nextLink--disabled {
-        .lp_triangle {
-            display:none;
-        }
+    #lp_js_loadPreviousInterval.lp_previousLink--disabled {
+      display: none;
+    }
+
+    #lp_js_loadNextInterval.lp_nextLink--disabled {
+      display: none;
     }
 
     .lp_triangle {
